# pytest-demo

./: coverage.lcov  pyproject.toml
src/: data_loader.py  utils.py
tests/data_loader/: test_load.py
tests/utils/: test_calculate_mean.py
